# middle-screenshot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  deny.toml  tray-icon.rc
.github/workflows/: publish.yml
src/: capture.rs  event.rs  image.rs  lens.rs  main.rs  util.rs  widget.rs  windows.rs
src/render/: animation.wgsl  mod.rs  texture.rs
