[package]
name = "middle-screenshot"
version = "0.2.0"
edition = "2021"
exclude = ["*.traineddata", "*.ico", "*.log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clipboard-win = "4.5.0"
eframe = { version = "0.22.0", features = ["wgpu"]}
egui_extras = "0.22.0"
image = { version = "0.24.6", default-features = false, features = ["bmp", "tiff", "ico"] }
imageproc = "0.23.0"
lazy_static = "1.4.0"
leptess = "0.14.0"
log-error = "0.1.1"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
screenshots = "0.7.1"
time = { version = "0.3.24", features = ["std", "macros"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "local-time"] }
tray-item = "0.8.0"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "50a4aa2"
dependencies = ["leptonica", "tesseract"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
