[package]
name = "middle-screenshot"
version = "0.3.0"
edition = "2021"
exclude = ["*.traineddata", "*.ico", "*.log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = ["derive"] }
clipboard-win = "4.5.0"
image = { version = "0.24.6", default-features = false, features = ["bmp", "tiff", "ico"] }
imageproc = "0.23.0"
lazy_static = "1.4.0"
leptess = "0.14.0"
log-error = "0.1.1"
pollster = "0.3.0"
rdev = { version = "0.5.2", features = ["unstable_grab"] }
screenshots = "0.7.2"
time = { version = "0.3.23", features = ["std", "macros"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "local-time"] }
tray-icon = "0.8.1"
wgpu = "0.17.1"
winit = "0.28.6"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "50a4aa2"
dependencies = ["leptonica", "tesseract"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
